--- a/PersonalWebSite.Front/PersonalWebSite.Front.csproj
+++ b/PersonalWebSite.Front/PersonalWebSite.Front.csproj
@@ -6,6 +6,95 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\css\bootstrap\scss\bootstrap-grid.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\bootstrap-reboot.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\bootstrap.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_alert.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_background-variant.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_badge.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_border-radius.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_box-shadow.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_breakpoints.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_buttons.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_caret.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_clearfix.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_deprecate.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_float.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_forms.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_gradients.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_grid-framework.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_grid.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_hover.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_image.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_list-group.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_lists.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_nav-divider.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_pagination.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_reset-text.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_resize.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_screen-reader.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_size.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_table-row.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_text-emphasis.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_text-hide.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_text-truncate.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_transition.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\mixins\_visibility.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_align.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_background.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_borders.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_clearfix.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_display.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_embed.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_flex.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_float.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_overflow.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_position.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_screenreaders.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_shadows.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_sizing.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_spacing.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_stretched-link.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_text.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\utilities\_visibility.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\vendor\_rfs.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_alert.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_badge.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_breadcrumb.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_button-group.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_buttons.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_card.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_carousel.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_close.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_code.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_custom-forms.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_dropdown.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_forms.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_functions.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_grid.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_images.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_input-group.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_jumbotron.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_list-group.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_media.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_mixins.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_modal.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_nav.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_navbar.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_pagination.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_popover.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_print.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_progress.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_reboot.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_root.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_spinners.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_tables.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_toasts.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_tooltip.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_transitions.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_type.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_utilities.scss" />
+    <Content Remove="wwwroot\css\bootstrap\scss\_variables.scss" />
   </ItemGroup>
 
   <ItemGroup>
@@ -14,6 +103,184 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="node_modules\bootstrap\scss\bootstrap-grid.scss" />
+    <None Include="node_modules\bootstrap\scss\bootstrap-reboot.scss" />
+    <None Include="node_modules\bootstrap\scss\bootstrap.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_alert.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_background-variant.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_badge.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_border-radius.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_box-shadow.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_breakpoints.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_buttons.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_caret.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_clearfix.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_deprecate.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_float.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_forms.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_gradients.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_grid-framework.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_grid.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_hover.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_image.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_list-group.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_lists.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_nav-divider.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_pagination.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_reset-text.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_resize.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_screen-reader.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_size.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_table-row.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_text-emphasis.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_text-hide.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_text-truncate.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_transition.scss" />
+    <None Include="node_modules\bootstrap\scss\mixins\_visibility.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_align.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_background.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_borders.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_clearfix.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_display.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_embed.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_flex.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_float.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_overflow.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_position.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_screenreaders.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_shadows.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_sizing.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_spacing.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_stretched-link.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_text.scss" />
+    <None Include="node_modules\bootstrap\scss\utilities\_visibility.scss" />
+    <None Include="node_modules\bootstrap\scss\vendor\_rfs.scss" />
+    <None Include="node_modules\bootstrap\scss\_alert.scss" />
+    <None Include="node_modules\bootstrap\scss\_badge.scss" />
+    <None Include="node_modules\bootstrap\scss\_breadcrumb.scss" />
+    <None Include="node_modules\bootstrap\scss\_button-group.scss" />
+    <None Include="node_modules\bootstrap\scss\_buttons.scss" />
+    <None Include="node_modules\bootstrap\scss\_card.scss" />
+    <None Include="node_modules\bootstrap\scss\_carousel.scss" />
+    <None Include="node_modules\bootstrap\scss\_close.scss" />
+    <None Include="node_modules\bootstrap\scss\_code.scss" />
+    <None Include="node_modules\bootstrap\scss\_custom-forms.scss" />
+    <None Include="node_modules\bootstrap\scss\_dropdown.scss" />
+    <None Include="node_modules\bootstrap\scss\_forms.scss" />
+    <None Include="node_modules\bootstrap\scss\_functions.scss" />
+    <None Include="node_modules\bootstrap\scss\_grid.scss" />
+    <None Include="node_modules\bootstrap\scss\_images.scss" />
+    <None Include="node_modules\bootstrap\scss\_input-group.scss" />
+    <None Include="node_modules\bootstrap\scss\_jumbotron.scss" />
+    <None Include="node_modules\bootstrap\scss\_list-group.scss" />
+    <None Include="node_modules\bootstrap\scss\_media.scss" />
+    <None Include="node_modules\bootstrap\scss\_mixins.scss" />
+    <None Include="node_modules\bootstrap\scss\_modal.scss" />
+    <None Include="node_modules\bootstrap\scss\_nav.scss" />
+    <None Include="node_modules\bootstrap\scss\_navbar.scss" />
+    <None Include="node_modules\bootstrap\scss\_pagination.scss" />
+    <None Include="node_modules\bootstrap\scss\_popover.scss" />
+    <None Include="node_modules\bootstrap\scss\_print.scss" />
+    <None Include="node_modules\bootstrap\scss\_progress.scss" />
+    <None Include="node_modules\bootstrap\scss\_reboot.scss" />
+    <None Include="node_modules\bootstrap\scss\_root.scss" />
+    <None Include="node_modules\bootstrap\scss\_spinners.scss" />
+    <None Include="node_modules\bootstrap\scss\_tables.scss" />
+    <None Include="node_modules\bootstrap\scss\_toasts.scss" />
+    <None Include="node_modules\bootstrap\scss\_tooltip.scss" />
+    <None Include="node_modules\bootstrap\scss\_transitions.scss" />
+    <None Include="node_modules\bootstrap\scss\_type.scss" />
+    <None Include="node_modules\bootstrap\scss\_utilities.scss" />
+    <None Include="node_modules\bootstrap\scss\_variables.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\bootstrap-grid.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\bootstrap-reboot.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\bootstrap.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_alert.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_background-variant.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_badge.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_border-radius.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_box-shadow.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_breakpoints.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_buttons.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_caret.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_clearfix.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_deprecate.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_float.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_forms.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_gradients.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_grid-framework.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_grid.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_hover.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_image.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_list-group.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_lists.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_nav-divider.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_pagination.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_reset-text.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_resize.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_screen-reader.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_size.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_table-row.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_text-emphasis.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_text-hide.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_text-truncate.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_transition.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\mixins\_visibility.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_align.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_background.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_borders.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_clearfix.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_display.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_embed.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_flex.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_float.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_overflow.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_position.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_screenreaders.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_shadows.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_sizing.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_spacing.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_stretched-link.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_text.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\utilities\_visibility.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\vendor\_rfs.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_alert.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_badge.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_breadcrumb.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_button-group.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_buttons.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_card.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_carousel.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_close.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_code.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_custom-forms.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_dropdown.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_forms.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_functions.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_grid.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_images.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_input-group.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_jumbotron.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_list-group.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_media.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_mixins.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_modal.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_nav.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_navbar.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_pagination.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_popover.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_print.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_progress.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_reboot.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_root.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_spinners.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_tables.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_toasts.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_tooltip.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_transitions.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_type.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_utilities.scss" />
+    <None Include="wwwroot\css\bootstrap\scss\_variables.scss" />
   </ItemGroup>
 
   <ItemGroup>
