--- a/PersonalWebSite.Front/appsettings.json
+++ b/PersonalWebSite.Front/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlDbContext": "Server=(localdb)\\mssqllocaldb;Database=PersonalWebSiteDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
