--- a/PersonalWebSite.Front/Properties/launchSettings.json
+++ b/PersonalWebSite.Front/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "PersonalWebSite.Front": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
